--- a/FYP-web/Homepage/fypl.html
+++ b/FYP-web/Homepage/fypl.html
@@ -102,11 +102,11 @@
           </div>
         </div>
 
-        <div class="carousel-slide bbs-slide">
+        <div class="carousel-slide">
           <div class="container-fypl">
             <h1>BINUS Business School</h1>
             <p>Where Group Projects Test Friendships</p>
-            <div class="card-fypl">
+            <div class="card-fypl  bbs-slide">
               <div class="fypl-left" id="card14">
                 <p>IBM</p>
                 <img src="assets/geb.png" alt="" />
@@ -204,8 +204,8 @@
       </div>
 
       <!-- Carousel Controls -->
-      <button class="carousel-nav prev">&lsaquo;</button>
-      <button class="carousel-nav next">&rsaquo;</button>
+      <button class="carousel-nav prev"><p>&lsaquo;</p></button>
+      <button class="carousel-nav next"><p>&rsaquo;</p></button>
 
       <!-- Pagination dots will be added here via JS -->
       <div class="carousel-pagination"></div>
