--- a/FYP-web/Homepage/fypl.html
+++ b/FYP-web/Homepage/fypl.html
@@ -51,6 +51,7 @@
             <p>Numbers Whisper, We Make Sense</p>
             <div class="card-fypl">
               <div class="fypl-solo" id="card5">
+                <p>Accounting</p>
                 <img src="assets/nat-soa.png" alt="" />
                 <p>Nathalie Audrey Christabel Gultom</p>
               </div>
@@ -66,6 +67,7 @@
             <p>Talk Smooth, Host Cooler than Ice</p>
             <div class="card-fypl">
               <div class="fypl-solo" id="card7">
+                <p>Marketing Com.</p>
                 <img src="assets/hibran-hotel.png" alt="" />
                 <p>Hibran Aditira</p>
               </div>
@@ -80,6 +82,7 @@
             <p>Build Things, Break Sleep Schedules</p>
             <div class="card-fypl">
               <div class="fypl-solo" id="card8">
+                <p>Biotechnology</p>
                 <img src="assets/nandya_foe.png" alt="" />
                 <p>Nandya Zahra Armevia</p>
               </div>
@@ -94,6 +97,7 @@
             <p>Feelings, Thoughts, and Deep Dives</p>
             <div class="card-fypl">
               <div class="fypl-solo" id="card9">
+                <p>IR - GC</p>
                 <img src="assets/ancilla-foh.png" alt="" />
                 <p>Maura Ancilla Paramaputri</p>
               </div>
@@ -114,7 +118,7 @@
               </div>
               <div class="confetti-container" id="confettiContainer14"></div>
               <div class="fypl-right" id="card15">
-                <p>IBM</p>
+                <p>IBM - GC</p>
                 <img src="assets/jess.png" alt="" />
                 <p>Jessica Trishya Hendra W.</p>
               </div>
@@ -169,11 +173,13 @@
             <p>Why SQL, Python Feels Like Nuts?</p>
             <div class="card-fypl">
               <div class="fypl-left" id="card12">
+                <p>IS</p>
                 <img src="assets/vin.png" alt="" />
                 <p>Vincent</p>
               </div>
               <div class="confetti-container" id="confettiContainer12"></div>
               <div class="fypl-right" id="card13">
+                <p>IS</p>
                 <img src="assets/bagas.png" alt="" />
                 <p>Benedictus Bagas Putra H.</p>
               </div>
@@ -189,11 +195,13 @@
             <p>Code-ing Nerds? Here's the Peoples</p>
             <div class="card-fypl">
               <div class="fypl-left" id="card14">
+                <p>CS</p>
                 <img src="assets/juan-socs.png" alt="" />
                 <p>Juan Ariviano C.</p>
               </div>
               <div class="confetti-container" id="confettiContainer14"></div>
               <div class="fypl-right" id="card15">
+                <p>CS</p>
                 <img src="assets/teo-socs.png" alt="" />
                 <p>Teo Apriyandi</p>
               </div>
