--- a/FYP-web/Homepage/fypl.html
+++ b/FYP-web/Homepage/fypl.html
@@ -219,10 +219,10 @@
       <div class="carousel-pagination"></div>
     </div>
 
-    <div class="register-card">
+    <!-- <div class="register-card">
       <h1>Register Now!</h1>
       <a href="https://freshmen.apps.binus.ac.id">Go to Freshman Apps</a>
-    </div>
+    </div> -->
 
     <footer>
       <p>See you in FYP! - @efwaipiel.alsut</p>
