--- a/FYP-web/Homepage/faq.html
+++ b/FYP-web/Homepage/faq.html
@@ -231,10 +231,10 @@
       </a>
     </div>
 
-    <!-- <div class="register-card">
+    <div class="register-card">
       <h1>Register Now!</h1>
       <a href="https://freshmen.apps.binus.ac.id">Go to Freshmen Apps</a>
-    </div> -->
+    </div>
 
     <footer>
       <p>See you in FYP! - @efwaipiel.alsut</p>
