--- a/FYP-web/Homepage/fypl.html
+++ b/FYP-web/Homepage/fypl.html
@@ -158,17 +158,31 @@
             <p>Jonathan Lin</p>
           </div>
           <div class="confetti-container" id="confettiContainer14"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <div class="carousel">
+    <div class="carousel-slide">
+      <div class="container-fypl">
+        <h1>School of Design</h1>
+        <p>Sleep? Sorry, Deadlines Need Love</p>
+        <div class="card-fypl">
           <div class="fypl-right" id="card15">
             <p>Film</p>
             <img src="assets/vanya-film.png" alt="" />
             <p>Vanya Aurelia Budiman</p>
           </div>
           <div class="confetti-container" id="confettiContainer17"></div>
+          </div>
         </div>
       </div>
     </div>
   </div>
 </div>
+
+
 
 <div class="carousel-wrapper">
   <div class="carousel">
