Revert "Update fypl.html"
This reverts commit c22d25b38e6630aadd04ce0eca68a2a0bd3250cc.

--- a/FYP-web/Homepage/fypl.html
+++ b/FYP-web/Homepage/fypl.html
@@ -47,6 +47,21 @@
       <div class="carousel">
         <div class="carousel-slide">
           <div class="container-fypl">
+            <h1>School of Accounting</h1>
+            <p>Numbers Whisper, We Make Sense</p>
+            <div class="card-fypl">
+              <div class="fypl-solo" id="card5">
+                <p>Accounting</p>
+                <img src="assets/nat-soa.png" alt="" />
+                <p>Nathalie Audrey Christabel Gultom</p>
+              </div>
+              <div class="confetti-container" id="confettiContainer5"></div>
+            </div>
+          </div>
+        </div>
+
+        <div class="carousel-slide">
+          <div class="container-fypl">
             <h1>F.O.D. Communication</h1>
             <h1>Hotel and Tourism</h1>
             <p>Talk Smooth, Host Cooler than Ice</p>
@@ -60,11 +75,7 @@
             </div>
           </div>
         </div>
-      </div>
-    </div>
 
-    <div class="carousel-wrapper">
-      <div class="carousel">
         <div class="carousel-slide">
           <div class="container-fypl">
             <h1>Faculty of Engineering</h1>
@@ -79,149 +90,134 @@
             </div>
           </div>
         </div>
-      </div>
-    </div>
-<!-- ============================================================================== -->
-<div class="carousel-wrapper">
-  <div class="carousel">
-    <div class="carousel-slide">
-      <div class="container-fypl">
-        <h1>Faculty of Humanities</h1>
-        <p>Feelings, Thoughts, and Deep Dives</p>
-        <div class="card-fypl">
-          <div class="fypl-solo" id="card9">
-            <p>IR - GC</p>
-            <img src="assets/ancilla-foh.png" alt="" />
-            <p>Maura Ancilla Paramaputri</p>
-          </div>
-          <div class="confetti-container" id="confettiContainer9"></div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- =============================================================================================================== -->
-<div class="carousel-wrapper">
-  <div class="carousel">
-    <div class="carousel-slide">
-      <div class="container-fypl">
-        <h1>BINUS Business School</h1>
-        <p>Where Group Projects Test Friendships</p>
-        <div class="card-fypl  bbs-slide">
-          <div class="fypl-left" id="card14">
-            <p>IBM</p>
-            <img src="assets/geb.png" alt="" />
-            <p>Gabriel Felande Aulia</p>
-          </div>
-          <div class="confetti-container" id="confettiContainer14"></div>
-          <div class="fypl-right" id="card15">
-            <p>IBM - GC</p>
-            <img src="assets/jess.png" alt="" />
-            <p>Jessica Trishya Hendra W.</p>
-          </div>
-          <div class="confetti-container" id="confettiContainer17"></div>
-          <div class="fypl-left" id="card14">
-            <p>Management</p>
-            <img src="assets/alysia-management.png" alt="" />
-            <p>Alysia Kharlotta</p>
-          </div>
-          <div class="confetti-container" id="confettiContainer15"></div>
-          <div class="fypl-right" id="card15">
-            <p>GBM</p>
-            <img src="assets/shae-gbm.png" alt="" />
-            <p>Shaena Fazila Rachman</p>
-          </div>
-          <div class="confetti-container" id="confettiContainer16"></div>
-          <div class="fypl-right" id="card15">
-            <p>BC</p>
-            <img src="assets/fadil-bc.png" alt="" />
-            <p>Muhammad Fadhil Habi</p>
-          </div>
-          <div class="confetti-container" id="confettiContainer17"></div>
-        </div>
-      </div>
-    </div>
-  <!-- Carousel Controls -->
-</div>
-</div>
 
-<div class="carousel-wrapper">
-  <div class="carousel">
-    <div class="carousel-slide">
-      <div class="container-fypl">
-        <h1>School of Design</h1>
-        <p>Sleep? Sorry, Deadlines Need Love</p>
-        <div class="card-fypl">
-          <div class="fypl-left" id="card14">
-            <p>DKV</p>
-            <img src="assets/jo-dkv.png" alt="" />
-            <p>Jonathan Lin</p>
+        <div class="carousel-slide">
+          <div class="container-fypl">
+            <h1>Faculty of Humanities</h1>
+            <p>Feelings, Thoughts, and Deep Dives</p>
+            <div class="card-fypl">
+              <div class="fypl-solo" id="card9">
+                <p>IR - GC</p>
+                <img src="assets/ancilla-foh.png" alt="" />
+                <p>Maura Ancilla Paramaputri</p>
+              </div>
+              <div class="confetti-container" id="confettiContainer9"></div>
+            </div>
           </div>
-          <div class="confetti-container" id="confettiContainer14"></div>
-          <div class="fypl-right" id="card15">
-            <p>Film</p>
-            <img src="assets/vanya-film.png" alt="" />
-            <p>Vanya Aurelia Budiman</p>
-          </div>
-          <div class="confetti-container" id="confettiContainer17"></div>
         </div>
-      </div>
-    </div>
-  </div>
-</div>
 
-<div class="carousel-wrapper">
-  <div class="carousel">
-    <div class="carousel-slide">
-      <div class="container-fypl">
-        <h1>School of Information</h1>
-        <h1>System</h1>
-        <p>Why SQL, Python Feels Like Nuts?</p>
-        <div class="card-fypl">
-          <div class="fypl-left" id="card12">
-            <p>IS</p>
-            <img src="assets/vin.png" alt="" />
-            <p>Vincent</p>
+        <div class="carousel-slide">
+          <div class="container-fypl">
+            <h1>BINUS Business School</h1>
+            <p>Where Group Projects Test Friendships</p>
+            <div class="card-fypl  bbs-slide">
+              <div class="fypl-left" id="card14">
+                <p>IBM</p>
+                <img src="assets/geb.png" alt="" />
+                <p>Gabriel Felande Aulia</p>
+              </div>
+              <div class="confetti-container" id="confettiContainer14"></div>
+              <div class="fypl-right" id="card15">
+                <p>IBM - GC</p>
+                <img src="assets/jess.png" alt="" />
+                <p>Jessica Trishya Hendra W.</p>
+              </div>
+              <div class="confetti-container" id="confettiContainer17"></div>
+              <div class="fypl-left" id="card14">
+                <p>Management</p>
+                <img src="assets/alysia-management.png" alt="" />
+                <p>Alysia Kharlotta</p>
+              </div>
+              <div class="confetti-container" id="confettiContainer15"></div>
+              <div class="fypl-right" id="card15">
+                <p>GBM</p>
+                <img src="assets/shae-gbm.png" alt="" />
+                <p>Shaena Fazila Rachman</p>
+              </div>
+              <div class="confetti-container" id="confettiContainer16"></div>
+              <div class="fypl-right" id="card15">
+                <p>BC</p>
+                <img src="assets/fadil-bc.png" alt="" />
+                <p>Muhammad Fadhil Habi</p>
+              </div>
+              <div class="confetti-container" id="confettiContainer17"></div>
+            </div>
           </div>
-          <div class="confetti-container" id="confettiContainer12"></div>
-          <div class="fypl-right" id="card13">
-            <p>IS</p>
-            <img src="assets/bagas.png" alt="" />
-            <p>Benedictus Bagas Putra H.</p>
-          </div>
-          <div class="confetti-container" id="confettiContainer13"></div>
         </div>
-      </div>
-    </div>
-  </div>
-</div>
 
-<div class="carousel-wrapper">
-  <div class="carousel">
-    <div class="carousel-slide">
-      <div class="container-fypl">
-        <h1>School of Computer</h1>
-        <h1>Science</h1>
-        <p>Code-ing Nerds? Here's the Peoples</p>
-        <div class="card-fypl">
-          <div class="fypl-left" id="card14">
-            <p>CS</p>
-            <img src="assets/juan-socs.png" alt="" />
-            <p>Juan Ariviano C.</p>
+        <div class="carousel-slide">
+          <div class="container-fypl">
+            <h1>School of Design</h1>
+            <p>Sleep? Sorry, Deadlines Need Love</p>
+            <div class="card-fypl">
+              <div class="fypl-left" id="card14">
+                <p>DKV</p>
+                <img src="assets/jo-dkv.png" alt="" />
+                <p>Jonathan Lin</p>
+              </div>
+              <div class="confetti-container" id="confettiContainer14"></div>
+              <div class="fypl-right" id="card15">
+                <p>Film</p>
+                <img src="assets/vanya-film.png" alt="" />
+                <p>Vanya Aurelia Budiman</p>
+              </div>
+              <div class="confetti-container" id="confettiContainer17"></div>
+            </div>
           </div>
-          <div class="confetti-container" id="confettiContainer14"></div>
-          <div class="fypl-right" id="card15">
-            <p>CS</p>
-            <img src="assets/teo-socs.png" alt="" />
-            <p>Teo Apriyandi</p>
+        </div>
+
+        <div class="carousel-slide">
+          <div class="container-fypl">
+            <h1>School of Information</h1>
+            <h1>System</h1>
+            <p>Why SQL, Python Feels Like Nuts?</p>
+            <div class="card-fypl">
+              <div class="fypl-left" id="card12">
+                <p>IS</p>
+                <img src="assets/vin.png" alt="" />
+                <p>Vincent</p>
+              </div>
+              <div class="confetti-container" id="confettiContainer12"></div>
+              <div class="fypl-right" id="card13">
+                <p>IS</p>
+                <img src="assets/bagas.png" alt="" />
+                <p>Benedictus Bagas Putra H.</p>
+              </div>
+              <div class="confetti-container" id="confettiContainer13"></div>
+            </div>
           </div>
-          <div class="confetti-container" id="confettiContainer15"></div>
+        </div>
+
+        <div class="carousel-slide">
+          <div class="container-fypl">
+            <h1>School of Computer</h1>
+            <h1>Science</h1>
+            <p>Code-ing Nerds? Here's the Peoples</p>
+            <div class="card-fypl">
+              <div class="fypl-left" id="card14">
+                <p>CS</p>
+                <img src="assets/juan-socs.png" alt="" />
+                <p>Juan Ariviano C.</p>
+              </div>
+              <div class="confetti-container" id="confettiContainer14"></div>
+              <div class="fypl-right" id="card15">
+                <p>CS</p>
+                <img src="assets/teo-socs.png" alt="" />
+                <p>Teo Apriyandi</p>
+              </div>
+              <div class="confetti-container" id="confettiContainer15"></div>
+            </div>
+          </div>
         </div>
       </div>
+
+      <!-- Carousel Controls -->
+      <button class="carousel-nav prev"><p>&lsaquo;</p></button>
+      <button class="carousel-nav next"><p>&rsaquo;</p></button>
+
+      <!-- Pagination dots will be added here via JS -->
+      <div class="carousel-pagination"></div>
     </div>
-  </div>
-  </div>
-</div>
 
     <!-- <div class="register-card">
       <h1>Register Now!</h1>
