update-kesekian-kalinya

--- a/FYP-web/Homepage/fypl.html
+++ b/FYP-web/Homepage/fypl.html
@@ -371,7 +371,7 @@
 
     <div class="register-card">
       <h1>Register Now!</h1>
-      <a href="https://freshmen.apps.binus.ac.id">Go to Freshman Apps</a>
+      <a href="https://freshmen.apps.binus.ac.id">Go to Freshmen Apps</a>
     </div>
 
     <footer>
