--- a/FYP-web/Homepage/fyp.html
+++ b/FYP-web/Homepage/fyp.html
@@ -257,7 +257,7 @@
 
     <div class="register-card">
       <h1>Register Now!</h1>
-      <a href="https://freshmen.apps.binus.ac.id">Go to Freshman Apps</a>
+      <a href="https://freshmen.apps.binus.ac.id">Go to Freshmesn Apps</a>
     </div>
 
     <footer>
